# GraphMemory

./: .gitignore  Cargo.toml  PLAN.md  README.md  config.json
examples/: api_config.rs  demo.rs  llm_integration.rs  server.rs
src/: lib.rs
src/api/: mod.rs  proxy.rs
src/cache/: l1_memory.rs  l2_disk.rs  l3_network.rs  l4_vendor.rs  l5_compute.rs  mod.rs  radix_trie.rs
src/context/: loader.rs  mod.rs  summary_sequence.rs  updater.rs
src/graph/: edge.rs  latent.rs  mod.rs  node.rs
src/package/: ada.rs  memory_package.rs  mod.rs  pro.rs  shell.rs
src/persistence/: mod.rs
tests/: integration_tests.rs
